card title avoid wrapping.

--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ body {
 .card__head {
   display: flex;
   align-items: center;
+  white-space: nowrap;
 }
 
 .name {
